--- a/covid.html
+++ b/covid.html
@@ -5,21 +5,21 @@
     <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="MFarelS">
-  <meta name="description" content="Data COVID-19 By MFarelS">
-  <meta name="keywords" content="MFarelS, MFarelSZ, Farel, Zahra, Nur Azahra, M Farel S, M Farel S Z, NurAzahra, mfarelsz.xyz, http://mfarelsz.xyz, https://mfarelsz.xyz, http mfarelsz xyz, https mfarelsz xyz, mfarels, mfarelsz, mfarelsz.xyz, Muhammad Farel Syahtiawan, Muhammad Farel, Muhammad, Farel Muhammad Syahtiawan, Farel Syahtiawan Muhammad, Syahtiawan Farel Muhammad, Syahtiawan Muhammad Farel, nurazahra.xyz, Farell, MFarel, FarelS, MFarelS CH, github mfarels, MFarelS Website, MFarelS API, MFarelSZ Website, MFarelSZ API, FarelZahra, Farelll, Zahraaa, MFarelSNurAzahra, Data Covid 19, Rajin Nulis, Bot Nulis, TikTok Generator, YouTube Generator, API Nulis, Rest Api Nulis, Harta Tahta, Harta, Tahta, Harta Tahta Generator, Harta Tahta API, Rest Api Harta Tahta, Nulis Online, Nulis Website, Nulis Buku Online, buat kamu, buat-kamu, dzikir, dzikir online, halah Generator, hilih Generator, huluh Generator, heleh Generator, holoh Generator, halah, hilih, huluh, heleh, holoh, Generator, jam, game, simple game, miniature, miniatur">
+  <meta name="author" content="Abraham Benedick | Mr.Benedick">
+  <meta name="description" content="Data COVID-19 By Mr.Benedick">
+  <meta name="keywords" content="Abraham Benedick, Mr.Benedick, Website made by Mr.Benedick, Website Abraham Benedick, abrahambenedick, benedickabraham">
   <link rel="shortcut icon" href="https://raw.githubusercontent.com/MFarelS/MFarelS/master/MFarelS.jpg">
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap"
         rel="stylesheet">
   <meta property="og:image" content="https://raw.githubusercontent.com/MFarelS/MFarelS/master/MFarelS.jpg">
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://mfarelsz.xyz/" />
-  <meta property="og:title" content="MFarelSZ | Covid 19" />
-  <meta property="og:description" content="Data COVID-19 By MFarelS">
-  <meta property="og:site_name" content="MFarelSZ">
-  <link rel="canonical" href="https://mfarelsz.xyz/">
-  <link rel="author" href="http://mfarelsz.xyz/">
-  <title>MFarelSZ | Covid 19</title>
+  <meta property="og:url" content="https://abrahamgans.github.io/xx/Tools.html" />
+  <meta property="og:title" content="Mr.Benedick | Covid 19" />
+  <meta property="og:description" content="Data COVID-19 By Mr.Benedick">
+  <meta property="og:site_name" content="Mr.Benedick">
+  <link rel="canonical" href="https://abrahamgans.github.io/xx/Tools.html">
+  <link rel="author" href="https://abrahamgans.github.io/xx/Tools.html">
+  <title>Mr.Benedick | Covid 19</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -29,7 +29,7 @@
 <body>
     <div class="container-fluid">
         <img src="img/covid-logo.jpg" class="mx-auto d-block m-5" width="120" height="120">
-        <h1 class="text-center h4">DATA COVID-19 DI INDONESIA</h1>
+        <h1 class="text-center h4">DATA COVID-19 DI INDONESIA by Abraham Benedick</h1>
         <div class="row mt-5 mb-3">
             <div class="col-sm-12 col-md-6 col-lg-6 col-xl-4 mb-3">
                 <div class="card bg-danger box-primary-shadow">
@@ -69,10 +69,10 @@
             Update : <span class="update-data font-italic"></span>
         </div>
         <div class="text-center">
-            <span>Made With &hearts; By MFarelS.</span>
+            <span>Made With &hearts; By Mr.Benedick.</span>
         </div>
         <div class="text-center">
-            <span>API by Mathdroid</span>
+            <span>API by Medan Cyber Team</span>
         </div>
     </div>
 
