--- a/covid.html
+++ b/covid.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Abraham Benedick | Mr.Benedick">
   <meta name="description" content="Data COVID-19 By Mr.Benedick">
   <meta name="keywords" content="Abraham Benedick, Mr.Benedick, Website made by Mr.Benedick, Website Abraham Benedick, abrahambenedick, benedickabraham">
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/MFarelS/MFarelS/master/MFarelS.jpg">
+  <link rel="shortcut icon" href="https://lh3.googleusercontent.com/a-/AOh14GgqrmX2fwrG33fTOJEQeFn6p7SY2SIsmCOoTCnn=s888-c-rg-br100">
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap"
         rel="stylesheet">
   <meta property="og:image" content="https://raw.githubusercontent.com/MFarelS/MFarelS/master/MFarelS.jpg">
