--- a/covid.html
+++ b/covid.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="https://lh3.googleusercontent.com/a-/AOh14GgqrmX2fwrG33fTOJEQeFn6p7SY2SIsmCOoTCnn=s888-c-rg-br100">
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;display=swap"
         rel="stylesheet">
-  <meta property="og:image" content="https://raw.githubusercontent.com/MFarelS/MFarelS/master/MFarelS.jpg">
+  <meta property="og:image" content="https://lh3.googleusercontent.com/a-/AOh14GgqrmX2fwrG33fTOJEQeFn6p7SY2SIsmCOoTCnn=s888-c-rg-br100">
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://abrahamgans.github.io/xx/Tools.html" />
   <meta property="og:title" content="Mr.Benedick | Covid 19" />
